# theory-radar

./: .gitignore  ARCHITECTURE.docx  ARCHITECTURE.md  DESIGN.docx  DESIGN.md  EXPERIMENT_PLAN.md  README.md  RESEARCH_PLAN.md  THEORY.docx  THEORY.md  dataset_loader.py  launch_depth7.sh  launch_new_datasets.sh  launch_turbo_d9.sh  launch_unified.sh  launch_wide_d3.sh  make_animation.py  pilot_deploy.py  pilot_depth7.py  pilot_depth7_gpu1.py  pyproject.toml  run_all_full.py  run_astar_beam.py  run_astar_theory.py  run_astar_v2.py  run_astar_v3.py  run_batched_folds.py  run_benchmark_suite.py  run_deep_pls.py  run_depth4_sigma.py  run_depth7.py  run_depth9.py  run_formula_search.py  run_formula_search_gpu.py  run_full_pipeline.py  run_fuzz_sigma.py  run_gpu_sigma.py  run_gpu_sigma_v2.py  run_kam_test.py  run_large_datasets.py  (+32 more)
.github/workflows/: ci.yml
atlas_portal/: app.py
chaga_symbolic/: PROPOSAL.md  symbolic_ast.chaga
docs/: CHIRP.md
experiments/benchmarks/: run_benchmarks.py  (+1 more)
paper/: REVISION_PLAN.md  astar_paper.aux  astar_paper.tex  method_paper.aux  method_paper.out  method_paper.tex  method_paper_v2.aux  method_paper_v2.out  method_paper_v2.tex  preprint.aux  preprint.bbl  preprint.blg  preprint.out  preprint.tex  preprint_v2.aux  preprint_v2.out  preprint_v2.tex  references.bib  theory_radar_paper.aux  theory_radar_paper.docx  theory_radar_paper.tex  theory_radar_paper_v2.docx  theory_radar_v3_31dataset.aux  theory_radar_v4_haberman_fix.tex  theory_radar_v5_final.tex  theory_radar_v6_submission.aux  theory_radar_v6_submission.tex  ~$eory_radar_paper.docx  ~$eory_radar_paper_v2.docx
scripts/: chirp_diagnose_saturation.py  chirp_validation.py
tensor_3body/: __init__.py  hamiltonian.py  integrator.py  integrator_gpu.py  known_solutions.py  landscape.py  sampling.py  tensor_ops.py  transforms.py
tests/: test_hamiltonian.py
zenodo_data/: README.md  reproduce.ipynb
(+28 files in other folders)
