[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theory-radar"
version = "0.4.0"
description = "Three-tier symbolic formula search: discover interpretable classifiers that compete with ensembles"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Andrew H. Bond"}]
keywords = ["symbolic-regression", "formula-discovery", "interpretable-ml", "theory-radar", "classification", "projections", "pca", "autotune"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
ensemble = ["scikit-learn>=1.0"]
physics = ["scipy>=1.10", "tensorly>=0.8", "matplotlib>=3.7"]
gpu = ["cupy-cuda12x"]
all = ["scikit-learn>=1.0", "scipy>=1.10", "tensorly>=0.8", "matplotlib>=3.7"]
dev = ["pytest>=7.0", "ruff>=0.4", "black>=24.0"]

[project.urls]
Homepage = "https://github.com/ahb-sjsu/astar-symbolic-discovery"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py310"]
